# avif-serialize

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: optimize.rs
src/: boxes.rs  constants.rs  lib.rs  writer.rs
