[package]
name = "avif-serialize"
version = "0.8.1"
authors = ["Kornel Lesiński <kornel@geekhood.net>"]
edition = "2021"
license = "BSD-3-Clause"
description = "Minimal writer for AVIF header structure (MPEG/HEIF/MIAF/ISO-BMFF)"
readme = "README.md"
categories = ["multimedia::images", "encoding"]
keywords = ["avif", "heif", "bmff", "av1", "mux"]
repository = "https://github.com/kornelski/avif-serialize"
homepage = "https://lib.rs/avif-serialize"
include = ["src/*.rs", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
arrayvec = "0.7.2"

[dev-dependencies]
mp4parse = { git = "https://github.com/mozilla/mp4parse-rust", rev = "c6ba5afd856c158d9cfc1a447165fcfaaf2b797c" }
avif-parse = "1.0.0"

[badges]
maintenance = { status = "passively-maintained" }
